TE-363 - fixed task label vertical aligning for 'create task' state

--- a/src/css/popup.less
+++ b/src/css/popup.less
@@ -405,6 +405,8 @@ input {
 
     &.task {
         .form-control {
+            display: block;
+            height: auto !important;
             border: 0;
         }
     }
